# ibmtpm20tss-tss

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
cmake/: TPM20tss.cmake
utils/: CMakeLists.txt  Commands.c  Commands12.c  Unmarshal.c  certifyx509.c  cryptoutils.c  ekutils.c  getcapability.c  getcryptolibrary.c  imalib.c  tss12.c  tss20.c  tssauth20.c  tsscryptoh.c  tssmarshal.c  tssmarshal12.c  tssntc.c
utils12/: CMakeLists.txt  getcapability.c
